--- a/css/search.scss
+++ b/css/search.scss
@@ -1,13 +1,7 @@
 //year and month fields
 
-#dd, #dd3 {
+#dd{
   z-index: 6;
-  font-family: $font-h;
-}
-#dd2, #dd4 {
-  z-index: 5;
-  margin-top: .5rem;
-  margin-bottom: 1.5rem;
   font-family: $font-h;
 }
 .wrapper-dropdown-1 {
@@ -76,7 +70,7 @@ fieldset {
 input, select {
   border: none;
   padding: 1rem 1rem .8rem 1rem;
-  width: 15rem;
+  width: 23rem;
   font-size: .9rem;
   font-family: $font-h;
   padding-bottom: .5rem;
@@ -116,7 +110,7 @@ input:focus + label {
 .search-btn {
   background-color: #eebaff;
   box-shadow: 0px -1px 6px 0px rgba(56,56,56,0.52);
-  margin-top: .5rem;
+  margin-top: .9rem;
   margin-bottom: 1.5rem;
   display: inline-block;
   cursor: pointer;
@@ -136,4 +130,7 @@ input:focus + label {
     position: relative;
     top: 1px;
   }
+}
+.list-btn {
+  margin-left: 1rem;
 }
