--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,46 @@ a {
   }
 }
 
+/* PAGINATION TEMPORARY STYLING */
+.button {
+  border-radius: .3rem;
+  background-color: #3D97D3;
+  box-shadow: 0px -1px 6px 0px rgba(38, 38, 38, 0.62);
+  margin-top: .9rem;
+  margin-bottom: 1.5rem;
+  display: inline-block;
+  cursor: pointer;
+  color: whitesmoke;
+  font-family: 'Exo 2' sans-serif;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: bold;
+  padding: .5rem 1rem;
+  text-decoration: none;
+  transition: all 500ms ease-out;
+  &:hover {
+    background: #165f8c;
+    color: #fff;
+  }
+}
+
+.top-pull-up {
+  margin-top: -3rem;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.pagination-area {
+  max-width: 958px;
+  margin: 0 auto;
+}
+
 // NAVIGATION
 
 nav {
