--- a/css/search.scss
+++ b/css/search.scss
@@ -108,13 +108,15 @@ input:focus + label {
 
 //search button
 .search-btn {
-  background-color: #eebaff;
+  letter-spacing: .1rem;
+  border-radius: .3rem;
+  background-color: #955CA5;
   box-shadow: 0px -1px 6px 0px rgba(56,56,56,0.52);
   margin-top: .9rem;
   margin-bottom: 1.5rem;
   display: inline-block;
   cursor: pointer;
-  color: #fff;
+  color: whitesmoke;
   font-family: 'Exo 2' sans-serif;
   text-transform: uppercase;
   font-size: 15px;
@@ -123,7 +125,7 @@ input:focus + label {
   text-decoration: none;
   transition: all 500ms ease-out;
   &:hover {
-    background-color: #955CA5;
+    background-color: darken(#955CA5, 20%);
     color: #fff;
   }
   &:active {
