--- a/index.haml
+++ b/index.haml
@@ -82,9 +82,16 @@
               .card-icon
                 .fa.fa-archive
             .card-body.box-height
-              %p If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
+              %p If you have missed an episode don't worry. Down here you can check out our last three episodes or if you feel like to listen to some vintage episodes just load more or go to our search box.
             .card-action
-              %a{:href => "#episodes"}Browse episodes
+              %ul
+                %li
+                  %a{:href => "#episodes"}Browse episodes
+                %li
+                  |
+                %li
+                  %a{:href => "#search"}
+                    .fa.fa-search
       #episodes-section
         #episodes
         %episode
