--- a/index.haml
+++ b/index.haml
@@ -92,6 +92,8 @@
                 %li
                   %a{:href => "#search"}
                     .fa.fa-search
+      #episodes-list
+        %episode-list
       #episodes-section
         #episodes
         %episode
@@ -386,7 +388,8 @@
   %script{:src => "js/min/defiance.js"}
   %script{:src => "raw.tag", :type => "riot/tag"}
   %script{:src => "episode.tag", :type => "riot/tag"}
+  %script{:src => "episode-list.tag", :type => "riot/tag"}
   %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}
   %script{:src => "js/router.js"}
   :javascript
-    riot.mount('episode, raw')
+    riot.mount('*')
