--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*  Syntax Quick Reference
   --------------------------
   column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter)
@@ -138,22 +137,102 @@
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
 /* begin TEMPORARY EPISODE-LIST STYLES */
 #episodes-list {
-  margin-top: 5rem; }
+  *zoom: 1;
+  width: auto;
+  max-width: 960px;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+  margin-top: 5rem;
+  background-color: whitesmoke; }
+  #episodes-list:before, #episodes-list:after {
+    content: '';
+    display: table; }
+  #episodes-list:after {
+    clear: both; }
 
-.list-info {
-  width: 6.25rem;
-  margin-top: -.4rem;
-  padding-right: 1rem; }
+.ep-list-col-left {
+  *zoom: 1;
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 80%;
+  margin-left: 0%;
+  margin-right: 0%;
+  padding: .6rem 0;
+  border-top: solid 1px #CCC; }
+  .ep-list-col-left:before, .ep-list-col-left:after {
+    content: '';
+    display: table; }
+  .ep-list-col-left:after {
+    clear: both; }
+  .ep-list-col-left:last-child {
+    margin-right: 0%; }
+  @media (max-width: 599px) {
+    .ep-list-col-left {
+      *zoom: 1;
+      float: left;
+      clear: none;
+      text-align: inherit;
+      width: 60%;
+      margin-left: 0%;
+      margin-right: 0%; }
+      .ep-list-col-left:before, .ep-list-col-left:after {
+        content: '';
+        display: table; }
+      .ep-list-col-left:after {
+        clear: both; }
+      .ep-list-col-left:last-child {
+        margin-right: 0%; } }
+
+.ep-list-col-right {
+  *zoom: 1;
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 20%;
+  margin-left: 0%;
+  margin-right: 0%;
+  text-align: right;
+  border-top: solid 1px #CCC;
+  padding: .6rem 0; }
+  .ep-list-col-right:before, .ep-list-col-right:after {
+    content: '';
+    display: table; }
+  .ep-list-col-right:after {
+    clear: both; }
+  .ep-list-col-right:last-child {
+    margin-right: 0%; }
+  @media (max-width: 599px) {
+    .ep-list-col-right {
+      *zoom: 1;
+      float: left;
+      clear: none;
+      text-align: inherit;
+      width: 40%;
+      margin-left: 0%;
+      margin-right: 0%;
+      text-align: right; }
+      .ep-list-col-right:before, .ep-list-col-right:after {
+        content: '';
+        display: table; }
+      .ep-list-col-right:after {
+        clear: both; }
+      .ep-list-col-right:last-child {
+        margin-right: 0%; } }
+  .ep-list-col-right p {
+    padding-right: 1rem; }
 
 .list-date {
-  text-align: left;
   padding-top: .3rem;
   font-size: .7rem;
   font-family: Roboto;
   color: grey; }
 
 .list-ep-number {
-  text-align: left;
   font-size: .8rem;
   font-family: Roboto;
   color: #3b3b3b; }
@@ -161,7 +240,7 @@
 .list-title {
   cursor: pointer;
   background: whitesmoke;
-  padding: 1rem 1.5rem; }
+  padding-left: 1rem; }
   .list-title .title-link {
     margin: 0;
     padding: 0;
@@ -176,18 +255,6 @@
   .list-title li {
     display: inline;
     padding-right: 0.9rem; }
-
-.list-entry {
-  position: relative;
-  width: auto;
-  border-top: solid 1px #CCC;
-  max-width: 960px;
-  float: none;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 0;
-  padding-right: 0; }
 
 .list-description {
   background: whitesmoke; }
