adds routing for list-view

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,7 @@
 
 /* begin TEMPORARY EPISODE-LIST STYLES */
 
-#episodes-list {
+#episodes-list-section {
   @include center($box-width);
   margin-top: 5rem;
   background-color: whitesmoke;
