--- a/index.haml
+++ b/index.haml
@@ -92,7 +92,8 @@
                 %li
                   %a{:href => "#search"}
                     .fa.fa-search
-      #episodes-list
+      #episodes-list-section
+        #episodes-list
         %episode-list
       #episodes-section
         #episodes
