--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*  Syntax Quick Reference
   --------------------------
   column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter)
@@ -199,7 +198,8 @@
   margin-right: 0%;
   text-align: right;
   border-top: solid 1px #CCC;
-  padding: .6rem 0; }
+  padding: .6rem 0;
+  background-color: #e8e8e8; }
   .ep-list-col-right:before, .ep-list-col-right:after {
     content: '';
     display: table; }
@@ -240,7 +240,7 @@
 
 .list-title {
   cursor: pointer;
-  background: whitesmoke;
+  background: #e8e8e8;
   padding-left: 1rem; }
   .list-title .title-link {
     margin: 0;
