--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@
   text-align: right;
   border-top: solid 1px #CCC;
   padding: .6rem 0;
+  background-color: darken(whitesmoke, 5%);
   @include breakpoint($xsmall) {
     @include column(2/5, $gutter: 0);
     text-align: right;
@@ -49,7 +50,7 @@
 }
 .list-title {
   cursor: pointer;
-  background: whitesmoke;
+  background: darken(whitesmoke, 5%);;
   padding-left: 1rem;
   .title-link {
     margin: 0;
