--- a/css/main.scss
+++ b/css/main.scss
@@ -52,7 +52,7 @@
   cursor: pointer;
   background: darken(whitesmoke, 5%);
   padding-left: 1rem;
-  line-height: normal;
+  line-height: 2.4;
   padding-top: .3rem;
   height: 2.7rem;
   .title-link {
