--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*  Syntax Quick Reference
   --------------------------
   column($ratios: 1, $offset: 0, $cycle: 0, $uncycle: 0, $gutter: $jeet-gutter)
@@ -766,65 +765,26 @@ iframe {
 
 .search-height {
   height: 10.06rem !important; }
+  @media (max-width: 799px) {
+    .search-height {
+      height: 7rem !important; } }
 
 #dd {
   z-index: 6;
   font-family: "Exo 2", sans-serif; }
 
-.wrapper-dropdown-1 {
-  position: relative;
-  width: 15rem;
-  padding: 10px;
-  margin-left: 1rem;
-  background: #fff;
-  color: #888;
-  outline: none;
-  cursor: pointer;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15); }
-  .wrapper-dropdown-1:after {
-    content: "";
-    width: 0;
-    height: 0;
-    position: absolute;
-    right: 16px;
-    top: 50%;
-    margin-top: -6px;
-    border-width: 6px 0 6px 6px;
-    border-style: solid;
-    border-color: transparent #955CA5; }
-
-.wrapper-dropdown-1 .dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  background: #fff;
-  list-style: none;
-  font-weight: normal;
-  opacity: 0;
-  pointer-events: none; }
-
-.wrapper-dropdown-1 .dropdown li a {
+.wrapper-dropdown-1 select {
   display: block;
   text-decoration: none;
   color: #9e9e9e;
   padding: 10px 20px; }
 
-.wrapper-dropdown-1 .dropdown li:hover a {
-  background: whitesmoke; }
-
-.wrapper-dropdown-1.active .dropdown {
-  opacity: 1;
-  pointer-events: auto; }
-
-.wrapper-dropdown-1.active:after {
-  border-color: #9bc7de transparent;
-  border-width: 6px 6px 0 6px;
-  margin-top: -3px; }
-
 form {
   width: 15rem;
   margin-left: 1rem; }
+  @media (max-width: 799px) {
+    form {
+      margin-left: 0; } }
 
 fieldset {
   border: none;
@@ -834,6 +794,7 @@ fieldset {
 input, select {
   border: none;
   padding: 1rem 1rem .8rem 1rem;
+  border-radius: 5px;
   width: 23rem;
   font-size: .9rem;
   font-family: "Exo 2", sans-serif;
@@ -843,14 +804,24 @@ input, select {
     outline: none;
     border-bottom: .3rem solid #955CA5; }
 
+#year-select {
+  height: 2.6rem;
+  width: 20rem;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+  color: #77777F; }
+  @media (max-width: 799px) {
+    #year-select {
+      width: 25rem; } }
+
 input + label {
   display: block;
   cursor: text;
   color: #777;
   transition: .15s ease-out all;
   position: absolute;
-  top: 1.2rem;
-  left: .9rem; }
+  top: .9rem;
+  left: .9rem;
+  font-size: .9rem; }
 
 input:focus + label {
   top: .3em;
@@ -870,9 +841,8 @@ input:focus + label {
 
 .search-btn {
   letter-spacing: .1rem;
-  border-radius: .3rem;
+  border-radius: .2rem;
   background-color: #955CA5;
-  box-shadow: 0px -1px 6px 0px rgba(56, 56, 56, 0.52);
   margin-top: .9rem;
   margin-bottom: 1.5rem;
   display: inline-block;
@@ -891,9 +861,30 @@ input:focus + label {
   .search-btn:active {
     position: relative;
     top: 1px; }
+  @media (max-width: 799px) {
+    .search-btn {
+      margin-left: 8rem; } }
 
-.list-btn {
-  margin-left: 1rem; }
+@media (max-width: 799px) {
+  .search-btn-list {
+    margin-left: 9rem; } }
+
+@media (max-width: 799px) {
+  .form-container {
+    *zoom: 1;
+    width: auto;
+    max-width: 25rem;
+    float: none;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 0;
+    padding-right: 0; }
+    .form-container:before, .form-container:after {
+      content: '';
+      display: table; }
+    .form-container:after {
+      clear: both; } }
 
 .search-dscrp {
   padding: 1rem; }
@@ -927,6 +918,10 @@ h2 {
     clear: both; }
   .box-col-search-word:last-child {
     margin-right: 0%; }
+  .box-col-search-word p {
+    padding: .9rem;
+    line-height: 1.3rem;
+    font-size: .85rem; }
   @media (max-width: 799px) {
     .box-col-search-word {
       display: block;
@@ -934,15 +929,13 @@ h2 {
       float: none;
       width: 100%;
       margin-left: auto;
-      margin-right: auto; }
+      margin-right: auto;
+      text-align: center;
+      padding-top: 1.5rem; }
       .box-col-search-word:first-child {
         margin-left: auto; }
       .box-col-search-word:last-child {
         margin-right: auto; } }
-  .box-col-search-word p {
-    padding: .9rem;
-    line-height: 1.3rem;
-    font-size: .85rem; }
 
 .box-col-search-or {
   *zoom: 1;
@@ -966,7 +959,8 @@ h2 {
       float: none;
       width: 100%;
       margin-left: auto;
-      margin-right: auto; }
+      margin-right: auto;
+      height: 1rem; }
       .box-col-search-or:first-child {
         margin-left: auto; }
       .box-col-search-or:last-child {
@@ -988,6 +982,10 @@ h2 {
     clear: both; }
   .box-col-search-year:last-child {
     margin-right: 0%; }
+  .box-col-search-year p {
+    padding: .9rem;
+    line-height: 1.3rem;
+    font-size: .85rem; }
   @media (max-width: 799px) {
     .box-col-search-year {
       display: block;
@@ -995,15 +993,14 @@ h2 {
       float: none;
       width: 100%;
       margin-left: auto;
-      margin-right: auto; }
+      margin-right: auto;
+      text-align: center;
+      height: 12rem !important;
+      padding-top: 1rem; }
       .box-col-search-year:first-child {
         margin-left: auto; }
       .box-col-search-year:last-child {
         margin-right: auto; } }
-  .box-col-search-year p {
-    padding: .9rem;
-    line-height: 1.3rem;
-    font-size: .85rem; }
 
 .entry {
   margin: 5rem auto;
