--- a/css/search.scss
+++ b/css/search.scss
@@ -4,63 +4,20 @@
   z-index: 6;
   font-family: $font-h;
 }
-.wrapper-dropdown-1 {
-  position: relative;
-  width: 15rem;
-  padding: 10px;
-  margin-left: 1rem;
-  background: #fff;
-  color: #888;
-  outline: none;
-  cursor: pointer;
-  box-shadow:inset 0 1px 3px rgba(0,0,0,.15);
-  &:after {
-    content: "";
-    width: 0;
-    height: 0;
-    position: absolute;
-    right: 16px;
-    top: 50%;
-    margin-top: -6px;
-    border-width: 6px 0 6px 6px;
-    border-style: solid;
-    border-color: transparent #955CA5;
-  }
-}
-.wrapper-dropdown-1 .dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  background: #fff;
-  list-style: none;
-  font-weight: normal;
-  opacity: 0;
-  pointer-events: none;
-}
-.wrapper-dropdown-1 .dropdown li a {
+.wrapper-dropdown-1 select {
     display: block;
     text-decoration: none;
     color: #9e9e9e;
     padding: 10px 20px;
-}
-.wrapper-dropdown-1 .dropdown li:hover a {
-    background: whitesmoke;
-}
-.wrapper-dropdown-1.active .dropdown {
-    opacity: 1;
-    pointer-events: auto;
-}
-.wrapper-dropdown-1.active:after {
-    border-color: #9bc7de transparent;
-    border-width: 6px 6px 0 6px ;
-    margin-top: -3px;
 }
 
 //search field
 form {
   width: 15rem;
   margin-left: 1rem;
+  @include breakpoint($small) {
+    margin-left: 0;
+  }
 }
 fieldset {
   border: none;
@@ -70,6 +27,7 @@ fieldset {
 input, select {
   border: none;
   padding: 1rem 1rem .8rem 1rem;
+  border-radius: 5px;
   width: 23rem;
   font-size: .9rem;
   font-family: $font-h;
@@ -80,14 +38,25 @@ input, select {
     border-bottom: .3rem solid #955CA5;
   }
 }
+#year-select{
+  height: 2.6rem;
+  width: 20rem;
+  box-shadow:inset 0 1px 3px rgba(0,0,0,.30);
+  color: #77777F;
+  @include breakpoint($small) {
+    width: 25rem;
+  }
+}
+
 input + label {
   display: block;
   cursor: text;
   color: #777;
   transition: .15s ease-out all;
   position: absolute;
-  top: 1.2rem;
+  top: .9rem;
   left: .9rem;
+  font-size: .9rem;
 }
 input:focus + label {
   top: .3em;
@@ -109,9 +78,8 @@ input:focus + label {
 //search button
 .search-btn {
   letter-spacing: .1rem;
-  border-radius: .3rem;
+  border-radius: .2rem;
   background-color: #955CA5;
-  box-shadow: 0px -1px 6px 0px rgba(56,56,56,0.52);
   margin-top: .9rem;
   margin-bottom: 1.5rem;
   display: inline-block;
@@ -132,7 +100,17 @@ input:focus + label {
     position: relative;
     top: 1px;
   }
+  @include breakpoint($small) {
+    margin-left: 8rem;
+  }
 }
-.list-btn {
-  margin-left: 1rem;
+.search-btn-list {
+  @include breakpoint($small) {
+    margin-left: 9rem;
+  }
+}
+.form-container {
+  @include breakpoint($small) {
+    @include center(25rem);
+  }
 }
