adds alt information to images

--- a/index.haml
+++ b/index.haml
@@ -22,7 +22,7 @@
           %a{:href => "#home"}
             %h1
               .nav-logo
-                %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
+                %img{:src => "img/kickarts-logo-new-icon.png", :alt => "KickArts Logo Icon"}/
               .nav-title
                 %span{:style => "font-weight: 400"}>KICK
                 ARTS
@@ -107,7 +107,7 @@
                 Richard Green
               %p.team-description Host, Producer &amp; Reviewer
               .card-img
-                %img{:src => "img/richard.jpg", :alt => ""}/
+                %img{:src => "img/richard.jpg", :alt => "Richard Green"}/
             .card-body.box-height
               %p
                 Richard is an arts practitioner with over 25 years experience in theatre, film, festivals, music and events.
@@ -131,7 +131,7 @@
                 Enny Benzonelli
               %p.team-description Co-Host, Co-Producer &amp; Reviewer
               .card-img
-                %img{:src => "img/enny.jpg", :alt => ""}/
+                %img{:src => "img/enny.jpg", :alt => "Enny Benzonelli"}/
             .card-body.box-height
               %p
                 Enny moved to New Zealand from Switzerland in 2009 after an extensive career in banking to fulfil his passion for film and television. He attended South Seas Film and Television School and after a soul searching tour of Aotearoa, he felt in love with New Zealand and made Auckland his home.
@@ -162,7 +162,7 @@
                 Paula Crimmens
               %p.team-description Books &amp; Theatre Reviewer
               .card-img
-                %img{:src => "img/paula.jpg", :alt => ""}/
+                %img{:src => "img/paula.jpg", :alt => "Paula Crimmens"}/
             .card-body.box-height
               %p
                 After a successful career as an actor and director in London, Paula retrained as a drama therapist and in 2006 set up Interacting theatre which aims to maximise the potential of disabled people through active participation in theatre.
@@ -184,7 +184,7 @@
                 Carolynn Day
               %p.team-description Theatre Reviewer
               .card-img
-                %img{:src => "img/carolynn.jpg", :alt => ""}/
+                %img{:src => "img/carolynn.jpg", :alt => "Carolynn Day"}/
             .card-body.box-height
               %p
                 Carolynn was imported from the UK a dozen years ago and has grown here like a weed ever since. She has no background in The Arts whatsoever, clearly making her the ideal choice as a reviewer for this show.
@@ -203,7 +203,7 @@
                 Adam Fresco
               %p.team-description Movies &amp; Theatre Reviewer
               .card-img
-                %img{:src => "img/adam.jpg", :alt => ""}/
+                %img{:src => "img/adam.jpg", :alt => "Adam Fresco"}/
             .card-body.box-height
               %p
                 Born in London, Adam wrote for, produced, directed and trained actors in British Theatre before working for ITV Television, where he ran the renowned ITV Television Workshop, producing, writing and directing everything from documentaries to children’s shows.
@@ -227,7 +227,7 @@
                 Catherine George
               %p.team-description Theatre Reviewer
               .card-img
-                %img{:src => "img/catherine.jpg", :alt => ""}/
+                %img{:src => "img/catherine.jpg", :alt => "Catherine George"}/
             .card-body.box-height
               %p
                 Catherine has had a long involvement with the arts, starting with entertaining her nanny’s Meals on Wheels recipients with her rendition of Tom Jones “What’s New Pussycat” aged 4. This highlight was soon trumped by performing in Joseph and his Amazing Technicolour Dreamcoat alongside a very young Rob Guest.
